fix(hero-page): aligned side-asset

--- a/css/components/_hero-page.scss
+++ b/css/components/_hero-page.scss
@@ -28,7 +28,7 @@
 
 .side-asset {
   position: absolute;
-  right: 10px;
+  right: 25px;
   bottom: 10px;
   img {
     width: 60px;
