--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ nav {
 
 .side-asset {
   position: absolute;
-  right: 10px;
+  right: 25px;
   bottom: 10px;
 }
 
